Add typed intro

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3894,6 +3894,9 @@ input, select, textarea {
 
 		#intro p {
 			font-size: 1.25em;
+			text-shadow: 0px 2px 5px rgba(0,0,0,0.4);
+			font-weight: 100;
+			letter-spacing: 7px;
 		}
 
 			@media screen and (max-width: 980px) {
